# masterarbeit_philipp_roiner

./: .gitignore  Anchor.toml  Masterarbeit.drawio  README.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
app/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vue.config.js
app/public/: index.html
app/src/: App.vue  idl.json  main.css  main.js  routes.js  store.js
app/src/api/: decrypt-image.js  fetch-images.js  fetch-licenses.js  fetch-nfts.js  index.js  make-offer.js  mint-edition.js  mint-nft.js  request.js
app/src/components/: ActionTable.vue  HashLink.vue  HelloWorld.vue  IpfsLink.vue  NavBar.vue  NftCard.vue  NftList.vue  PageHome.vue  PageMintNft.vue  PageNftDetail.vue  Spinner.vue
programs/masterarbeit_philipp_roiner/: Cargo.toml  stackoverflow.ts
programs/masterarbeit_philipp_roiner/src/: instructions.rs  lib.rs  stackoverflow.rs  state.rs
programs/masterarbeit_philipp_roiner/src/instructions/: accept_offer.rs  buy_license.rs  cancel_offer.rs  close_account.rs  create_license.rs  init_offer.rs  make_offer.rs  mint_nft.rs  mod.rs  offer.rs  print_edition.rs  update_image.rs
programs/masterarbeit_philipp_roiner/src/state/: error_codes.rs  image.rs  license.rs  mod.rs  offer.rs
server/: Dockerfile  idl.json  index.js  package-lock.json  package.json  private.pem  public.pem  routes.js
server/controller/: decryptImage.js  upload.js
server/db/: index.js
server/middleware/: crypto.js  encrypt.js  image.js  licenseAuth.js  upload.js  web3Auth.js  workspace.js
tests/: masterarbeit_philipp_roiner.ts
(+24 files in other folders)
